app/styles/main.css
/* ... */
.padding-left-right-0 {
  padding-left: 0px !important;
  padding-right: 0px !important;
}
.margin-left-right-0 {
  margin-left: 0px !important;
  margin-right: 0px !important;
}
.margin-top-bottom-10 {
  margin-left: 10px !important;
  margin-right: 10px !important;
}
.padding-top-bottom-0 {
  padding-top: 0px !important;
  padding-bottom: 0px !important;
}
.padding-top-0 {
  padding-top: 0px !important;
}
.container-with-button {
  width: 100% !important;
  padding-right: 0px !important;
}
.margin-bottom-0 {
  margin-bottom: 0px !important;
}
.image-width-height {
  width: 100px !important;
  height: 50px !important;
}
.button-icon {
  padding-left: 5px !important;
  margin: 4px 4px 4px -3px !important;
}
.editor textarea {
  background-color: white;
}
.margin-top--5 {
  margin-top: -0.3124em !important;
}
.font-size-small {
  font-size: small !important;
}
.pdf-editor {
  float: left !important;
  overflow: scroll !important;
  height: 500px !important;
  width: 100% !important;
}
.pdf-toolbar-padding {
  padding: 5px 5px 5px 20px !important;
}
.width-25p {
  width: 25% !important;
}
.content-player-header {
  padding: 5px 5px 5px 5px !important;
  font-size: 0.75em !important;
  border: gray !important;
}
.font-size-175em {
  font-size: 1.75em !important;
}
.margin-right-10 {
  margin-right: 10px !important;
}
.margin-right-8rem {
  margin-right: 8rem !important;
}
.overflowAuto {
  overflow: auto !important;
}
.overflowHidden {
  overflow: hidden !important;
}
.top-inherit {
  top: inherit !important;
}
.dark-blue-color {
  background-color: #006cff !important;
}
.font-white {
  color: #FFFFFF !important;
}
.font-dark-blue {
  color: #006cff !important;
}
.next-previous-button {
  width: 290px !important;
  height: 80px !important;
  padding: 0px !important;
}
.width-100 {
  width: 100% !important;
}
.height-100 {
  height: 100% !important;
}
.margin-left-right-20 {
  margin-left: 20px !important;
  margin-right: 20px !important;
}
.lower-case {
  text-transform: lowercase !important;
}
.header-container {
  margin-left: 1px !important;
  border-bottom: 5px solid #0099CC !important;
}
.header-user-icon {
  margin-right: 0px !important;
}
.content-card-meta {
  background: rgba(0, 0, 0, 0.5) !important;
  color: #FFFFFF !important;
  padding: 5px !important;
}
.login-form .inline input {
  width: 80% !important;
}
.ui.menu {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 0 0 !important;
  margin-right: 0px;
  margin-bottom: 1rem;
  margin-left: 0px;
  font-family: HelveticaNeueLTStd-Lt, Helvetica, Arial, sans-serif;
  background: #ffffff linear-gradient(rgba(255, 255, 255, 0.05), rgba(0, 0, 0, 0.05));
  font-weight: 400;
  border: 1px solid rgba(0, 0, 0, 0.13);
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.13);
  border-radius: .2307em;
  min-height: 3em;
  -webkit-box-pack: center !important;
      -ms-flex-pack: center !important;
          justify-content: center !important;
}
.margin-right-8 {
  margin-right: 8% !important;
}
.margin-left-small {
  margin-left: 3% !important;
}
.margin-left-52 {
  margin-left: 58% !important;
}
.padding-top-1rem {
  padding-top: 1rem;
}
.padding-top-2rem {
  padding-top: 2rem;
}
.padding-top-header-large-icons {
  padding-top: 1.5rem;
}
.padding-top-circular-human-icon {
  padding-top: 0.9rem !important;
}
.font-size-header-icon {
  font-size: 2em !important;
}
.loginForm {
  padding-bottom: 40px;
}
.ui.modal .actions {
  background: #FFFFFF !important;
  border: none;
  padding: 1rem 1rem 0 0 !important;
}
.alarm-icon-header {
  padding-top: 1.5rem !important;
  margin: auto !important;
}
.header-search-filters-divider {
  margin-top: 0px !important;
  border-color: transparent;
  border-width: 0px !important;
}
.header-filter-container {
  background-color: #ffffff;
}
.header-filter-label {
  width: 55px;
  color: #aba7a7;
  margin-top: 9px;
  font-weight: 400;
}
.content-result-img {
  height: 240px !important;
}
.content-result-card-description {
  height: 74px !important;
  overflow: visible;
  padding-top: 19px;
  padding-bottom: 15px;
}
#search-suggestions {
  box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
  height: 200px;
  overflow-y: auto;
  z-index: 10;
  position: absolute;
  background: white;
  text-align: left;
  width: 436px;
  margin-left: 82px;
}
#search-suggestions .result .content .title {
  font-size: 15px;
  padding: 2px;
  color: #717171;
  cursor: pointer;
}
#search-suggestions .result .content .title:hover {
  color: black;
  background: #d9d9d9;
}
.dash-heading-border {
  border-bottom: 1px dashed #333;
  overflow: auto;
}
.marginBottom10 {
  margin-bottom: 10px;
}
.block-border-bottom {
  border-bottom: 1px solid #ddd;
  padding: 0px 0px 10px 0px;
}
.noPad {
  padding-left: 0;
  padding-right: 0;
}
.currentcourse-block-desc {
  line-height: 22px;
  padding-top: 10px;
  padding-left: 20px;
}
.course-intro-big {
  margin-top: 0px;
  line-height: 1;
  display: block;
  padding-bottom: 5px;
}
.course-intro-big span,
.course-intro-small span {
  font-family: 'FrutigerNeueW01-Regular';
  font-size: 20px;
}
.course-intro-small {
  font-size: 14px;
  cursor: pointer;
  color: #428bca;
}
.empty-div {
  height: 50px;
}
.currentcourse-block-header {
  font-size: 3em;
  font-weight: 600;
  line-height: 6.1;
  margin: 2em 0 0.1em 0;
}
.dashboardBadgeText,
.dashboardBadgeText span {
  text-align: center !important;
  margin-top: 20px;
  font-size: 64px;
  margin-bottom: 15px;
  font-family: 'Frutiger Neue W01 UltLt';
  display: block;
  width: 100%;
}
.toc-list-sub-menu {
  display: none;
  padding: 5px;
}
.toc-list {
  list-style: none !important;
  cursor: pointer;
  margin-left: 5px;
}
.toc-content-header {
  font-size: 17px !important;
  color: #333;
}
.toc-content-child-header {
  font-size: 15px !important;
  color: #444;
}
.dynamic-section-card .slider .card {
  position: relative
            !important ;
  background-color: transparent!important;
  box-shadow: none;
}
/* ... */

